manifests/base/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-hunt
  annotations:
    openshift.io/node-selector: ""
