manifests/base/10-service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    deploymentconfig: hunt-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
