manifests/base/11-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    deployment: hunt-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
