manifests/base/13-route-ui.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui
  labels:
    component: ui
spec:
  to:
    kind: Service
    name: ui
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
